--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
-	<head><title>hello world</title></head>
+	<head>
+		<title>hello world</title>
+	</head>
 <body>
+	<h2>Hello!, Welcome first web site.</h2>
+	<h2>Hello!, Welcome first web site.</h2>
 	<h2>Hello!, Welcome first web site.</h2>
 </body>
